Navbar First Setup
- Navbar Setup by LW
- Navbar CSS

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,19 +13,13 @@
           <div class="menu-top">
             <ul class="nav navbar-nav navbar-right">
               <li>
-                  <a class="page-scroll" href="#sell">Sell Your Music</a>
+                  <a class="page-scroll navbar-item" href="#adonafit" style="background-color: transparent;">A Dona Fit</a>
               </li>
               <li>
-                  <a class="page-scroll" href="#music-publishing">Music Publishing</a>
+                  <a class="page-scroll navbar-item" href="#music-publishing" style="background-color: transparent;">Como Funciona</a>
               </li>
               <li>
-                  <a class="page-scroll" href="#services">Artist Services</a>
-              </li>
-              <li>
-                  <a class="page-scroll" href="#blog">Blog</a>
-              </li>
-              <li>
-                  <a class="page-scroll" href="#login">Login</a>
+                  <a class="page-scroll navbar-item" href="#music-publishing" style="background-color: transparent;">Faça seu Pedido</a>
               </li>
             </ul>
           </div>
