--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -26,5 +26,8 @@ $navbar-size: 14px;
 $navbar-height: 17px;
 $navbar-weight: 300;
 
-$header-big-size: 70px;
 $font-medium-size: 20px;
+
+$header-big-size: 70px;
+$header-medium-size: 50px;
+$header-small-size: 30px;
