--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,13 +13,13 @@
           <div class="menu-top">
             <ul class="nav navbar-nav navbar-right">
               <li>
-                  <a class="page-scroll navbar-item" href="#adonafit" style="background-color: transparent;">A Dona Fit</a>
+                  <a class="page-scroll navbar-item" href="#adonafit" style="background-color: transparent;">A DONA FIT</a>
               </li>
               <li>
-                  <a class="page-scroll navbar-item" href="#music-publishing" style="background-color: transparent;">Como Funciona</a>
+                  <a class="page-scroll navbar-item" href="#music-publishing" style="background-color: transparent;">COMO FUNCIONA</a>
               </li>
               <li>
-                  <a class="page-scroll navbar-item" href="#music-publishing" style="background-color: transparent;">Faça seu Pedido</a>
+                  <a class="page-scroll navbar-item" href="#music-publishing" style="background-color: transparent;">FAÇA SEU PEDIDO</a>
               </li>
             </ul>
           </div>
