--- a/app/views/pages/_second_section.html.erb
+++ b/app/views/pages/_second_section.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row margin-top-medium">
       <div class="col-md-3">
-        <div class="section-icons">
+        <div class="content-center">
           <%= cl_image_tag("cooking_nooqnu.svg", :height=>150, :crop=>"scale") %>
           <div class="margin-top-small">
             <p>Dona Fit prepara as delícias com ingredientes selecionados e saudáveis</p>
@@ -10,7 +10,7 @@
         </div>
       </div>
       <div class="col-md-3">
-        <div class="section-icons">
+        <div class="content-center">
           <%= cl_image_tag("open-menu_fbahhs.svg", :height=>150, :crop=>"scale") %>
           <div class="margin-top-small">
             <p>O cardápio semanal é disponibilizado todo Sábado</p>
@@ -18,7 +18,7 @@
         </div>
       </div>
       <div class="col-md-3">
-        <div class="section-icons">
+        <div class="content-center">
           <%= cl_image_tag("ordering_rs8vjn.svg", :height=>150, :crop=>"scale") %>
           <div class="margin-top-small">
             <p>Você faz seu pedido abaixo ou via whatsapp</p>
@@ -26,7 +26,7 @@
         </div>
       </div>
         <div class="col-md-3">
-        <div class="section-icons">
+        <div class="content-center">
           <%= cl_image_tag("delivery_qbux9q.svg", :height=>150, :crop=>"scale") %>
           <div class="margin-top-small">
             <p>Seu pedido é entregue onde você estiver</p>
