small improvements for first depolying

--- a/app/views/pages/_second_section.html.erb
+++ b/app/views/pages/_second_section.html.erb
@@ -1,7 +1,7 @@
 <div class="section-small">
   <div class="container">
     <div class="row margin-top-medium">
-      <div class="col-md-3">
+      <div class="col-md-3 col-sm-12">
         <div class="content-center">
           <%= cl_image_tag("cooking_nooqnu.svg", :height=>150, :crop=>"scale") %>
           <div class="margin-top-small">
@@ -9,7 +9,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-3 col-sm-12">
         <div class="content-center">
           <%= cl_image_tag("open-menu_fbahhs.svg", :height=>150, :crop=>"scale") %>
           <div class="margin-top-small">
@@ -17,7 +17,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-3 col-sm-12">
         <div class="content-center">
           <%= cl_image_tag("ordering_rs8vjn.svg", :height=>150, :crop=>"scale") %>
           <div class="margin-top-small">
@@ -25,7 +25,7 @@
           </div>
         </div>
       </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-12">
         <div class="content-center">
           <%= cl_image_tag("delivery_qbux9q.svg", :height=>150, :crop=>"scale") %>
           <div class="margin-top-small">
