--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -39,10 +39,9 @@
       <div class="dropdown">
         <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
         <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-          <li><a href="#">A Bloco D</a></li>
-          <li><a href="#">Soluções Estruturais</a></li>
-          <li><a href="#">Serviços</a></li>
-          <li><a href="#">Contato</a></li>
+          <li><a href="#">A DONA FIT</a></li>
+          <li><a href="#">COMO FUNCIONA</a></li>
+          <li><a href="#">FAÇA SEU PEDIDO</a></li>
         </ul>
       </div>
     </div>
