--- a/app/views/pages/_footer.html.erb
+++ b/app/views/pages/_footer.html.erb
@@ -1,11 +1,20 @@
-<div class="footer">
-  <div class="footer-links">
+<!-- <div class="footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <div class="footer-links">
 
-    <a href="#"><i class="fa fa-instagram"></i></a>
-    <a href="#"><i class="fa fa-facebook"></i></a>
+          <a href="#"><i class="fa fa-instagram"></i></a>
+          <a href="#"><i class="fa fa-facebook"></i></a>
 
+        </div>
+        <div class="footer-copyright">
+          Todos os direitos reservados
+        </div>
+      </div>
+    </div>
+
+    </div>
   </div>
-  <div class="footer-copyright">
-    Todos os direitos reservados
-  </div>
-</div>
+
+ -->
