--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -3,9 +3,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 100px;
+  height: 10rem;
   padding: 0px 50px;
-  color: rgba(0,0,0,0.3);
+  margin-bottom: 0;
 }
 .footer-links {
   display: flex;
