--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<!-- <div class="footer">
+<div class="footer">
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
@@ -6,15 +6,13 @@
 
           <a href="#"><i class="fa fa-instagram"></i></a>
           <a href="#"><i class="fa fa-facebook"></i></a>
-
         </div>
         <div class="footer-copyright">
           Todos os direitos reservados
         </div>
       </div>
     </div>
-
-    </div>
   </div>
+</div>
 
- -->
+
