--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-wagon hidden-xs hidden-sm">
+<div class="navbar navbar-fixed-top navbar-wagon hidden-xs hidden-sm">
   <div class="container">
     <div class="row">
       <div class="col-xm-12 col-xs-12">
