--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,14 +1,13 @@
 .banner {
-  color: white;
-  text-align: center;
+  // text-align: center;
   height: 500px !important;
   /* if you have a 70px navbar => height: calc(100vh - 70px); */
   background-size: cover !important;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%),
-                  url('https://res.cloudinary.com/dib2nyadi/image/upload/v1533590117/dan-gold-298710-unsplash_id9lnv.jpg');
+  background-image:
+                  url('https://res.cloudinary.com/dib2nyadi/image/upload/c_scale,h_600/v1533735289/foodbanner_owrstj.jpg');
   img {
     display: block;
     margin: 0 auto;
@@ -16,7 +15,7 @@
 }
 
 .banner-content {
-  text-align: center;
+  text-align: left;
 }
 .banner h1 {
   font-size: $header-big-size;
@@ -27,24 +26,31 @@
 
 .banner h2 {
   font-size: $header-medium-size;
-  font-weight: 200;
-  color: #ffffff;
-  text-align: center;
+  font-weight: 600;
+  color: $dark-green;
+  // text-align: center;
 }
 
 .banner li {
   font-size: $font-medium-size;
-  font-weight: lighter;
-  color: #ffffff;
-  text-align: left;
+  font-weight: 300;
+  color: $dark-green;
 }
 
 .banner h3 {
   font-size: $header-small-size;
   font-weight: 200;
-  color: #ffffff;
+  color: $dark-green;
   // text-align: left;
 }
+
+.banner p {
+  font-size: $font-medium-size;
+  font-weight: 300;
+  color: $dark-green;
+  // text-align: left;
+}
+
 
 .carousel {
   height:500px;
