--- a/app/views/pages/_banner.html.erb
+++ b/app/views/pages/_banner.html.erb
@@ -1,10 +1,15 @@
 <div class="banner">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-sm-12 col-md-12">
+      <div class="col-xs-12 col-sm-12 col-md-6">
         <div class="banner-content">
-          <h2>Comida de Qualidade</h2>
-          <h3>No seu trabalho, Na sua casa</h3>
+          <h2>DONA FIT PAULISTA</h2>
+<!--           <p>Entregas de Marmitas em São Paulo</p> -->
+          <ul>
+            <li>Pratos especialmente preparados e selecionados</li>
+              <li>Ingredientes Saudáveis</li>
+              <li>Apenas R$10</li>
+          </ul>
             <a class="btn btn-primary btn-lg margin-top-small">Faça seu Pedido</a>
         </div>
       </div>
