Menu Page #meals
- Create Menu with All Meals
- Add Devise Gem
- Add Money Rails Gem
- Create Login Form

--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -27,6 +27,7 @@ $navbar-height: 17px;
 $navbar-weight: 300;
 
 $font-medium-size: 20px;
+$font-small-size: 14px;
 
 $header-big-size: 70px;
 $header-medium-size: 50px;
