--- a/app/views/pages/_banner.html.erb
+++ b/app/views/pages/_banner.html.erb
@@ -10,7 +10,8 @@
               <li>Ingredientes Saudáveis</li>
               <li>Apenas R$10</li>
           </ul>
-            <a class="btn btn-primary btn-lg margin-top-small">Faça seu Pedido</a>
+          <%= link_to "Faça seu Pedido", meals_path, class: "btn btn-primary btn-lg margin-top-small" %>
+           <!--  <a class="btn btn-primary btn-lg margin-top-small">Faça seu Pedido</a> -->
         </div>
       </div>
     </div>
