--- a/app/views/pages/_first_section.html.erb
+++ b/app/views/pages/_first_section.html.erb
@@ -1,4 +1,4 @@
-<div class="section-medium">
+<div class="section-medium", id="adonafit">
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-xs-12 margin-top-medium">
