--- a/app/views/pages/_second_section.html.erb
+++ b/app/views/pages/_second_section.html.erb
@@ -1,4 +1,4 @@
-<div class="section-small">
+<div class="section-small" id="comofunciona">
   <div class="container">
     <div class="row margin-top-medium">
       <div class="col-md-3 col-sm-12">
