--- a/app/views/shared/_home_navbar.html.erb
+++ b/app/views/shared/_home_navbar.html.erb
@@ -15,13 +15,21 @@
         <div class="navbar-right hidden-xs hidden-sm">
           <div class="menu-top">
             <ul class="nav navbar-nav navbar-right">
-
+              <li>
+                  <a class="page-scroll navbar-item" href="#adonafit" style="background-color: transparent;">A DONA FIT</a>
+              </li>
+              <li>
+                  <a class="page-scroll navbar-item" href="#comofunciona" style="background-color: transparent;">COMO FUNCIONA</a>
+              </li>
+              <li>
+                  <a class="page-scroll navbar-item" href="#comofunciona" style="background-color: transparent;">ONDE ENTREGAMOS</a>
+              </li>
               <li>
                   <%= link_to "FAÇA SEU PEDIDO", meals_path, class: "page-scroll navbar-item" %>
               </li>
               <% if user_signed_in? %>
                 <li>
-                  <%= "BEM VINDO (A), #{@user.first_name.upcase}" %>
+                  <%= "BEM VINDO, #{user.name}" %>
                 </li>
               <% else %>
                 <li>
@@ -54,3 +62,4 @@
     </div>
   </div>
 </div>
+
