--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,15 +1,31 @@
-<h2>Forgot your password?</h2>
+<div class="banner-devise">
+  <div class="banner-content">
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-sm-4 col-sm-offset-4">
+          <div class="form-login">
+            <div class="form-header">
+              <p>ESQUECI A SENHA</p>
+            </div>
+              <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+              <%= f.error_notification %>
 
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+              <div class="form-inputs">
+                <%= f.input :email, required: true, autofocus: true %>
+              </div>
+              <div class="form-actions">
+                <%= f.button :submit, "Reenviar Senha", class: "btn btn-primary" %>
+              </div>
+            <% end %>
+            <div class="form-links">
+              <%= link_to "Lembrou a senha? ", new_session_path(resource_name), class: "btn" %>
+              <%= link_to "Cadastre-se", new_registration_path(resource_name), class: "btn" %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
