--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,17 +1,33 @@
-<h2>Sign up</h2>
+<div class="banner-devise">
+  <div class="banner-content">
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-sm-4 col-sm-offset-4">
+          <div class="form-login">
+            <div class="form-header">
+              <p>CADASTRE-SE FAZER SEU PEDIDO</p>
+            </div>
+            <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+              <%= f.error_notification %>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
-    <%= f.input :password_confirmation, required: true %>
+              <div class="form-inputs">
+                <%= f.input :first_name, required: true, autofocus: true, label: "Nome" %>
+                <%= f.input :email, required: true, autofocus: true, label: "E-mail" %>
+                <%= f.input :password, required: true, label: "Senha" %>
+                <%= f.input :password_confirmation, required: true, label: "Confirme sua senha" %>
+              </div>
+              <div class="form-actions">
+                <%= f.button :submit, "Cadastre-se", class: "btn btn-primary" %>
+              </div>
+            <% end %>
+            <div class="form-links">
+              <%= link_to "Já tem conta? Entre aqui", new_session_path(resource_name), class: "btn" %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
