--- a/app/views/meals/_index_not_logged.html.erb
+++ b/app/views/meals/_index_not_logged.html.erb
@@ -19,22 +19,24 @@
   </div>
 <!-- If user is not logged in! -->
   <div class="col-md-6">
-    <div class="row">
-      <div class="col-md-10 ">
-        <div class="form-login margin-top-medium">
-          <%= simple_form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
-            <div class="form-group">
-              <%= f.input :email, required: false, autofocus: true, input_html: { class: 'form-control' }, label: "E-mail" %>
-              <%= f.input :password, required: false, input_html: { class: 'form-control' }, label: "Senha" %>
-            </div>
-            <div class="form-group btn">
-              <%= f.button :submit, "Login" %>
-            </div>
-          <% end %>
-          <div class="form-links">
-            <%= link_to "Cadastre-se", new_registration_path(resource_name) %>
-            <%= link_to "Esqueci a Senha", new_password_path(resource_name) %>
+    <div class="col-md-8 col-md-offset-2">
+      <div class="form-login margin-top-medium">
+        <div class="form-header">
+          <p>ENTRE PARA FAZER SEUS PEDIDOS</p>
+        </div>
+        <%= simple_form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
+          <%= f.error_notification %>
+          <div class="form-inputs">
+            <%= f.input :email, required: true, autofocus: true, label: "E-mail" %>
+            <%= f.input :password, required: true, label: "Senha" %>
           </div>
+          <div class="form-actions">
+            <%= f.button :submit, "Entrar", class: "btn btn-primary" %>
+          </div>
+        <% end %>
+        <div class="form-links">
+          <%= link_to "Cadastre-se", new_registration_path(resource_name), class: "btn" %>
+          <%= link_to "Esqueceu a senha?", new_password_path(resource_name), class: "btn" %>
         </div>
       </div>
     </div>
