Create Admin Section
- Create Admin Meals Index
- Create New/Edit Meal Actions

--- a/app/assets/stylesheets/_meals.scss
+++ b/app/assets/stylesheets/_meals.scss
@@ -42,3 +42,15 @@
   margin-top: -22px;
 }
 
+.menu-item-btn {
+  padding-left: 10px;
+}
+
+.menu-buttons {
+  display: flex;
+}
+
+.menu-header {
+  display: flex;
+}
+
