--- a/app/views/meals/index.html.erb
+++ b/app/views/meals/index.html.erb
@@ -1,7 +1,11 @@
-<div class="container margin-top-medium">
-  <% if user_signed_in? == false %>
-      <%= render 'index_not_logged' %>
-   <% else %>
-      <%= render 'index_logged' %>
-  <% end %>
-</div>
+<% if current_user.admin? %>
+  <%= render 'index_admin' %>
+<% else %>
+  <div class="container margin-top-medium">
+    <% if user_signed_in? == false %>
+        <%= render 'index_not_logged' %>
+     <% else %>
+        <%= render 'index_logged' %>
+    <% end %>
+  </div>
+<% end %>
