--- a/app/views/meals/_form.html.erb
+++ b/app/views/meals/_form.html.erb
@@ -15,6 +15,9 @@
             <%= f.input :name, required: true, autofocus: true, label: "Título" %>
             <%= f.input :description, required: true, autofocus: true, label: "Descrição" %>
             <%= f.input :price, required: true, autofocus: true, label: "Preço" %>
+            <div class="form-check">
+              <%= f.input :available, as: :boolean, label: "Disponível para venda", input_html: {class: "form-check-input"} %>
+            </div>
           </div>
           <div class="form-actions">
             <%= f.button :submit, "Adicionar", class: "btn btn-primary" %>
