--- a/app/views/meals/_index_logged.html.erb
+++ b/app/views/meals/_index_logged.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-10 offset-md-1">
+  <div class="col-md-7">
     <div class="menu-body">
       <% @meals.each do |meal| %>
         <div class="menu-item">
@@ -18,6 +18,31 @@
         </div>
       <% end %>
     </div>
+  </div>
+  <div class="col-md-5">
+    <ul class="list-group">
+      <p>Carrinho de Compras</p>
+      <% @orders.each do |order| %>
+        <li class="list-group-item shop-cart">
+          <p><%= order.meal.name  %></p>
+
+          <p><%= order.quantity %></p>
+          <p><%= order.quantity * order.meal.price %></p>
+        </li>
+      <% end %>
+    </ul>
+    <div class="form-login">
+      <%= simple_form_for [@cart] do |f| %>
+      <div class="form-inputs">
+      <%= f.input :order_id, required: true, autofocus: true, label: false, input_html: {min: "1"} %>
+      </div>
+    </div>
+
+    <div class="menu-item-btn">
+      <%= link_to "Continuar", meals_path, class: "btn btn-primary" %>
+    </div>
+    <% end %>
+
   </div>
 </div>
 
