--- a/app/views/carts/new.html.erb
+++ b/app/views/carts/new.html.erb
@@ -5,7 +5,9 @@
         <h3>Resumo</h3>
         <%= simple_form_for [@cart] do |f| %>
           <% @orders.each do |order| %>
-            <%= f.input :order_ids, as: :hidden, input_html: { value: "#{order.id}"} %>
+            <%= order.meal.name %>
+            <%= order.quantity %>
+            <%= f.input :order_ids,  input_html: { value: "#{order.id}"} %>
           <% end %>
             <%= f.button :submit, "Adicionar", class: "btn btn-primary" %>
         <% end %>
