--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -10,7 +10,14 @@ $gray: #000000;
 $light-gray: #F4F4F4;
 
 $dark-green: #29536B;
-$light-green: #87bba2;
-$light-gray: #ebebeb;
+
+
 $green-gray: #cad2c5;
-$medium-green: #56a3a6
+
+
+
+$red: #9B1825;
+$bege: #F7F3E3;
+$light-green: #7FB069;
+$medium-green: #588B8B;
+
