--- a/app/views/pages/_features.html.erb
+++ b/app/views/pages/_features.html.erb
@@ -1,6 +1,6 @@
 <div class="section-small" id="comofunciona">
-  <div class="container">
-    <div class="row margin-top-medium">
+  <div class="container margin-top-big margin-bottom-big">
+    <div class="row">
       <div class="col-md-3 col-sm-12">
         <div class="content-center">
           <%= cl_image_tag("cooking_nooqnu.svg", :height=>150, :crop=>"scale") %>
