--- a/app/views/pages/_first_section.html.erb
+++ b/app/views/pages/_first_section.html.erb
@@ -1,12 +1,13 @@
-<div class="section-medium", id="adonafit">
+<div class="section-donafit", id="adonafit">
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-xs-12 margin-top-medium">
-        <h3>A Dona Fit</h3>
-        <p class="margin-top-small">Dona Fit é uma verdadeira mãe de todo mundo! Uma cozinheira nata, que todos os dias elabora pratos saudáveis, saborosos e caseiros. Venha se tornar mais um cliente. Bla bla bla bla bla</p>
-        <p>Dona Fit é uma verdadeira mãe de todo mundo! Uma cozinheira nata, que todos os dias elabora pratos saudáveis, saborosos e caseiros. Venha se tornar mais um cliente. Bla bla bla bla bla</p>
+        <h3>Você não precisa cozinhar todo dia!</h3>
+        <p class="margin-top-small">Sabemos que seu tempo é curto e que você não tem tempo para cozinhar. Chegar em casa tarde e ter que pensar no que comer é difícil. Estamos aqui para te ajudar!</p>
+        <p>Dona Fit prepara pratos saborosos e saudáveis para que você aproveite melhor seu tempo</p>
+        <h3>Peça DonaFit!</h3>
       </div>
-      <div class="col-md-6 col-xs-12 margin-top-big ">
+      <div class="col-md-6 col-xs-12 margin-top-big margin-bottom-big ">
         <div class="banner-donafit">
 
         </div>
