--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,4 +1,5 @@
 <%= render 'banner' %>
 <%= render 'first_section' %>
-<%= render 'second_section' %>
+<%= render 'features' %>
 <%= render 'menu_section' %>
+<%= render 'contact_us' %>
