--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,13 +1,10 @@
 .banner {
-  // text-align: center;
-  height: 500px !important;
-  /* if you have a 70px navbar => height: calc(100vh - 70px); */
+  height: 800px !important;
   background-size: cover !important;
+  border: 0;
   display: flex;
   align-items: center;
-  justify-content: center;
-  background-image:
-                  url('https://res.cloudinary.com/dib2nyadi/image/upload/c_scale,h_600/v1533735289/foodbanner_owrstj.jpg');
+  background-image:linear-gradient(-90deg, rgba(72, 85, 99, 0.5) 0%, rgba(41, 50, 60, 0.5) 50%), url('https://res.cloudinary.com/dib2nyadi/image/upload/v1539286019/DonaFit/james-harris-205441-unsplash.jpg');
   img {
     display: block;
     margin: 0 auto;
@@ -15,45 +12,87 @@
 }
 
 .banner-content {
-  text-align: left;
+  text-align: center;
 }
+
 .banner h1 {
   font-size: $header-big-size;
   font-weight: 200;
-  color: #ffffff;
+  color: $light-gray;
   text-align: center;
 }
 
 .banner h2 {
+  display: inline-block;
   font-size: $header-medium-size;
-  font-weight: 600;
-  color: $dark-green;
+  font-weight: 500;
+  color: white;
   // text-align: center;
 }
 
+.banner h4 {
+  color: white;
+}
+
+
 .banner li {
-  font-size: $font-medium-size;
-  font-weight: 300;
-  color: $dark-green;
+  font-size: $header-small-size;
+  font-weight: 400;
+  color: black;
+  list-style: none;
 }
 
 .banner h3 {
   font-size: $header-small-size;
-  font-weight: 200;
-  color: $dark-green;
+  font-weight: 400;
+  color: $light-gray;
   // text-align: left;
 }
 
 .banner p {
   font-size: $font-medium-size;
-  font-weight: 300;
-  color: $dark-green;
+  font-weight: 400;
+  color: black;
   // text-align: left;
 }
 
+.banner a {
+  color: white;
+}
 
-.carousel {
-  height:500px;
+
+.content-info {
+  display: table;
+
+  ul {
+    text-align: left;
+  }
+}
+
+
+.btn-xlarge {
+  padding: 18px 28px;
+      font-size: 22px; //change this to your desired size
+      line-height: normal;
+      -webkit-border-radius: 8px;
+         -moz-border-radius: 8px;
+              border-radius: 8px;
+  color: black;
+  font-weight: 400;
+}
+
+.banner-mobile {
+  height: 600px !important;
+  background-size: cover !important;
+  border: 0;
+  display: flex;
+  align-items: center;
+  background-image:
+    url('https://res.cloudinary.com/dib2nyadi/image/upload/c_scale,w_1000/v1538164586/Flores Panamby/sandrachile-257048-unsplash_1.jpg');
+  img {
+    display: block;
+    margin: 0 auto;
+  }
 }
 
 
