--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,18 +1,19 @@
 .footer {
-  background: $light-green;
+  background: $red;
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: 10rem;
   padding: 0px 50px;
   margin-bottom: 0;
+  color: white;
 }
 .footer-links {
   display: flex;
   align-items: center;
 }
 .footer-links a {
-  color: black;
+  color: white;
   opacity: 0.15;
   text-decoration: none;
   font-size: 24px;
