--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,9 +1,9 @@
 /* Main navbar */
 .navbar-wagon {
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background: $light-gray;
+  background: #9B1825;
   transition: all 0.3s ease;
-  height: 70px;
+  height: 80px;
   // padding: 0px 30px;
   display: flex;
   align-items: center;
@@ -30,17 +30,25 @@
   justify-content: space-between;
   a {
     font-family: $base-font;
-    color: $dark-green;
+    color: white;
     font-size: $navbar-size;
     line-height: $navbar-height;
   }
 
   li {
     font-family: $base-font;
-    color: $dark-green;
+    color: white;
     font-size: $navbar-size;
     line-height: $navbar-height;
   }
+}
+
+.logo-big {
+  padding-left: 10px;
+}
+
+.dropdown {
+  padding-right: 10px;
 }
 
 // .navbar-item {
