--- a/app/views/pages/_banner.html.erb
+++ b/app/views/pages/_banner.html.erb
@@ -1,52 +1,41 @@
-<div class="banner">
+<div class="banner hidden-xs">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-sm-12 col-md-6">
+      <div class="col-md-10 col-md-offset-1">
         <div class="banner-content">
-          <h2>DONA FIT PAULISTA</h2>
-<!--           <p>Entregas de Marmitas em São Paulo</p> -->
-          <ul>
-            <li>Pratos especialmente preparados e selecionados</li>
-              <li>Ingredientes Saudáveis</li>
-              <li>Apenas R$10</li>
-          </ul>
-          <%= link_to "Faça seu Pedido", meals_path, class: "btn btn-primary btn-lg margin-top-small" %>
-           <!--  <a class="btn btn-primary btn-lg margin-top-small">Faça seu Pedido</a> -->
+          <div class="content-title">
+            <h2>AQUELA COMIDA CASEIRA</h2>
+            <h3>ENTREGUE ONDE VOCÊ QUISER</h3>
+            <h4>Não perca seu tempo. Dona Fit cozinha a comida da sua semana</h4>
+          </div>
+            <div class= "margin-top-big">
+              <%= link_to "Faça Seu Pedido", '#comofunciona', class: "btn btn-primary  btn-xlarge" %>
+            </div>
         </div>
       </div>
     </div>
   </div>
 </div>
-<!--   <div id="myCarousel" class="carousel slide" data-ride="carousel">
 
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
 
-    <div class="carousel-inner banner">
-      <div class="item active">
-        <img src="https://res.cloudinary.com/dib2nyadi/image/upload/c_scale,h_600/v1521332816/fit3_ibmaky.jpg">
-      </div>
+<div class="banner hidden-sm hidden-md hidden-lg">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <div class="banner-content">
+          <div class="content-title">
+            <h2>AQUELA COMIDA CASEIRA</h2>
+            <h3>ENTREGUE ONDE VOCÊ QUISER</h3>
+            <h4>Não perca seu tempo. Dona Fit cozinha a comida da sua semana</h4>
+          </div>
+            <div class= "margin-top-big">
+              <%= link_to "Faça Seu Pedido", '#comofunciona', class: "btn btn-primary  btn-xlarge" %>
+            </div>
+        </div>
 
-      <div class="item">
-        <img src="https://res.cloudinary.com/dib2nyadi/image/upload/c_scale,h_600/v1533590117/dan-gold-298710-unsplash_id9lnv.jpg" alt="Chicago">
-      </div>
-
-      <div class="item">
-        <img src="https://res.cloudinary.com/dib2nyadi/image/upload/v1533590197/dan-gold-701265-unsplash_tvjecx.jpg" alt="New York">
       </div>
     </div>
+  </div>
+</div>
 
-
-    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div> -->
 
