--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="footer margin-top-medium">
+<div class="footer">
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
