--- a/app/views/meals/index.html.erb
+++ b/app/views/meals/index.html.erb
@@ -1,8 +1,10 @@
-<div class="container margin-top-medium">
-  <% if user_signed_in? == false %>
-      <%= render 'index_not_logged' %>
-   <% else %>
-      <%= render 'index_logged' %>
-  <% end %>
+<div class="meals-menu">
+  <div class="container margin-top-medium">
+    <% if user_signed_in? == false %>
+        <%= render 'index_not_logged' %>
+     <% else %>
+        <%= render 'index_logged' %>
+    <% end %>
+  </div>
 </div>
 
