--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -4,8 +4,8 @@
       <h3>Seu Carrinho de Compras</h3>
       <ul class="list-group">
         <% @cart.orders.each do |order| %>
-            <div class="row">
-          <li class="list-group-item shop-cart">
+          <div class="row">
+            <li class="list-group-item shop-cart">
               <div class="col-xs-4">
                 <p><%= order.meal.name %></p>
               </div>
@@ -15,12 +15,33 @@
               <div class="col-xs-3">
                 <p>R$ <%= order.meal.price %> <%= link_to "Editar", edit_order_path(order), class: "btn btn-primary" %></p>
               </div>
-            </div>
-          <% end %>
-        </li>
+            </li>
+          </div>
+        <% end %>
       </ul>
-      <div id="map" style="width:100%; height:300px">
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-6 col-xs-12">
+      <div id="map2" style="width:100%; height:300px">
       </div>
+    </div>
+    <div class="col-md-6 col-xs-12">
+      <%= simple_form_for [@cart] do |f| %>
+        <p><%= f.input :address, label: "Endereço de Entrega", input_html: { id: 'flat_address' }%></p>
+        <div class="form-button">
+          <button class="btn  btn btn-primary btn-sm">Add!</button>
+        </div>
+      <%end %>
+      <% results = Geocoder.search("Paris")%>
+      <%= results %>
+      <%= Geocoder::Calculations.distance_between([47.858205,2.294359], [40.748433,-73.985655]) %>
     </div>
   </div>
 </div>
+
+
+
+
+
+
